# deep_learning_tutorial

./: Cargo.toml
csv_data/: data_W1.csv  data_W2.csv  data_W3.csv  data_b1.csv  data_b2.csv  data_b3.csv
src/: data.rs  main.rs  main_old.rs  two_layer_net.rs
src/two_layer_net/: function.rs
