[package]
name = "perceptron"
version = "0.1.0"
authors = ["usagi3rain <usagi3rain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
ndarray-stats = "0.4"
mnist = "0.4.1"
csv = "1.1"
rand = "0.8.3"
